--- a/templates/admin/Statement/detail_transaction.html.twig
+++ b/templates/admin/Statement/detail_transaction.html.twig
@@ -33,56 +33,61 @@
     <td>
         {{ include('admin/Statement/_descriptionContainer.html.twig') }}
         {% if transaction.documents|length %}
-            <div style="margin-top:4px; padding:4px 12px; border-top:1px solid #999;">
-                <table class="inline-hover">
-                    {% set total = 0 %}
-                    {% for document in transaction.documents %}
-                        {% set isInvoiceAttachment = (document.isAttachment and document.invoice is not null) %}
-                        {% if document.affectsTransactionSum %}
-                            {% set total = total + document.amount %}
-                        {% endif %}
-                        <tr>
-                            <td>{% if document.type.value == 'attachment' %}
-                                    <i class="fa fa-paperclip text-super-muted"></i>
-                                {% else %}
-                                    <i class="fa fa-file text-super-muted"></i>
-                                {% endif %}
-                                {{ document.filename }}
-                                {% if document.invoice is not null %}
-                                    {{ document.invoice|invoice_substitution_link }}
-                                {% endif %}
-                            </td>
-                            <td style="white-space: nowrap; text-align: right">
-                                {% if not isConsolidated and not isInvoiceAttachment %}
-                                    <a href="javascript:void(0)" title="unlink document" class="tx-delete-btn"
-                                       data-document-id="{{ document.id }}"
-                                       data-document-type="{{ document.type.value }}"
-                                       data-transaction-id="{{ transaction.id }}"
-                                    ><i class="fa fa-unlink"></i></a>
-                                {% endif %}
-                                <a target="download" title="view document" class="text-muted"
-                                   href="{{ path('admin_document_download', {document:document.id}) }}"><i
-                                            class="{{ file_icon(document.filename) }}"></i> </a>
-                                <a href="{{ document|ea_url('detail', 'Document') }}"><i class="fa fa-eye"></i></a>
-                            </td>
-                            <td colspan="2" class="text-right">
-                                <span{% if not document.affectsTransactionSum %} style="opacity:.5"{% endif %}>{{ document.amount|cent_amount }}</span>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                    {% if transaction.documents|length > 1 %}
-                        <tr style="border-top: 1px dotted #999;">
-                            <td>Total</td>
-                            {% if total != transaction.amount %}
-                                <td class="text-right text-danger" colspan="2">
-                                    ({{ (total - transaction.amount)|cent_amount }}
-                                    ) {{ total|cent_amount }}</td>
-                            {% else %}
-                                <td class="text-right" colspan="2">{{ total|cent_amount }}</td>
+            <div class="transaction-documents-container">
+                <div class="transaction-toggle-icon">
+                    <i class="fa fa-caret-down"></i> <!-- Default icon -->
+                </div>
+                <div class="transaction-documents">
+                    <table class="inline-hover">
+                        {% set total = 0 %}
+                        {% for document in transaction.documents %}
+                            {% set isInvoiceAttachment = (document.isAttachment and document.invoice is not null) %}
+                            {% if document.affectsTransactionSum %}
+                                {% set total = total + document.amount %}
                             {% endif %}
-                        </tr>
-                    {% endif %}
-                </table>
+                            <tr>
+                                <td>{% if document.type.value == 'attachment' %}
+                                        <i class="fa fa-paperclip text-super-muted"></i>
+                                    {% else %}
+                                        <i class="fa fa-file text-super-muted"></i>
+                                    {% endif %}
+                                    {{ document.filename }}
+                                    {% if document.invoice is not null %}
+                                        {{ document.invoice|invoice_substitution_link }}
+                                    {% endif %}
+                                </td>
+                                <td style="white-space: nowrap; text-align: right">
+                                    {% if not isConsolidated and not isInvoiceAttachment %}
+                                        <a href="javascript:void(0)" title="unlink document" class="tx-delete-btn"
+                                           data-document-id="{{ document.id }}"
+                                           data-document-type="{{ document.type.value }}"
+                                           data-transaction-id="{{ transaction.id }}"
+                                        ><i class="fa fa-unlink"></i></a>
+                                    {% endif %}
+                                    <a target="download" title="view document" class="text-muted"
+                                       href="{{ path('admin_document_download', {document:document.id}) }}"><i
+                                                class="{{ file_icon(document.filename) }}"></i> </a>
+                                    <a href="{{ document|ea_url('detail', 'Document') }}"><i class="fa fa-eye"></i></a>
+                                </td>
+                                <td colspan="2" class="text-right">
+                                    <span{% if not document.affectsTransactionSum %} style="opacity:.5"{% endif %}>{{ document.amount|cent_amount }}</span>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        {% if transaction.documents|length > 1 %}
+                            <tr style="border-top: 1px dotted #999;">
+                                <td>Total</td>
+                                {% if total != transaction.amount %}
+                                    <td class="text-right text-danger" colspan="2">
+                                        ({{ (total - transaction.amount)|cent_amount }}
+                                        ) {{ total|cent_amount }}</td>
+                                {% else %}
+                                    <td class="text-right" colspan="2">{{ total|cent_amount }}</td>
+                                {% endif %}
+                            </tr>
+                        {% endif %}
+                    </table>
+                </div>
             </div>
         {% endif %}
     </td>
