Support toggling of statement documents

--- a/templates/admin/Statement/details.html.twig
+++ b/templates/admin/Statement/details.html.twig
@@ -60,7 +60,9 @@
                             <tr>
                                 <td>#</td>
                                 <td>Date</td>
-                                <td>Description</td>
+                                <td>
+                                    Description <a href="#" onclick="$('.transaction-documents-container').toggleClass('collapsed')">toggle</a>
+                                </td>
                                 <td>Amount</td>
                                 <td>Status</td>
                             </tr>
