--- a/templates/admin/Invoice/_cardInvoice.html.twig
+++ b/templates/admin/Invoice/_cardInvoice.html.twig
@@ -51,6 +51,7 @@
                         .setController('App\\Controller\\Admin\\PropertyCrudController')
                         .setAction('detail')
                         .setEntityId(property.id) }}">{{ property }}</a>
+                </div>
             </div>
         {% endif %}
         <div class="field-group">
