--- a/templates/bundles/EasyAdminBundle/layout.html.twig
+++ b/templates/bundles/EasyAdminBundle/layout.html.twig
@@ -67,6 +67,8 @@
               alert('Network error occurred')
             })
         })
+        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
       })
     </script>
 
