--- a/templates/admin/Statement/detail_transaction.html.twig
+++ b/templates/admin/Statement/detail_transaction.html.twig
@@ -54,7 +54,7 @@
                                     {{ document.filename }}
                                     {% if document.invoice is not null %}
                                         {{ document.invoice|invoice_substitution_link }}
-                                    {% endif %}
+                                    {% endi f %}
                                 </td>
                                 <td style="white-space: nowrap; text-align: right">
                                     {% if not isConsolidated and not isInvoiceAttachment %}
@@ -66,6 +66,7 @@
                                     {% endif %}
                                     <a target="download" title="view document" class="text-muted"
                                        href="{{ path('admin_document_download', {document:document.id}) }}"><i
+                                                style="width: 12px; text-align: left"
                                                 class="{{ file_icon(document.filename) }}"></i> </a>
                                     <a href="{{ document|ea_url('detail', 'Document') }}"><i class="fa fa-eye"></i></a>
                                 </td>
